fixed stretching

--- a/main.css
+++ b/main.css
@@ -1,7 +1,10 @@
 
 body{
-	background-image: url(img/beach.jpg);
-	background-size: cover;
+	background: url(img/beach.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
 	color: white;
 	font-family: 'Lato', sans-serif;
 	font-weight:100;
@@ -53,7 +56,7 @@ a {
 	height: 80px;
 }
 .peg{
-	margin-top: 3%;
+	margin-top: .5%;
 	margin-left: 100px;
 	float: left;
 	text-align: center;
